Fix spacing above save and remove buttons

--- a/teknologr/members/static/css/style.css
+++ b/teknologr/members/static/css/style.css
@@ -110,7 +110,7 @@ ul.ui-autocomplete {
   z-index: 1100;
 }
 
-/* Overrides list-group-item from Bootstrap */ 
+/* Overrides list-group-item from Bootstrap */
 .list-group-item {
   padding: 3px 10px
 }
@@ -122,4 +122,8 @@ ul.ui-autocomplete {
 /* API buttons at top of member view*/
 .apibtn {
   float: right;
+}
+
+#save-remove-buttons {
+  margin-top: 20px;
 }
